Fix incorrect bibtex entries.

--- a/publications/esorics15.bib
+++ b/publications/esorics15.bib
@@ -6,5 +6,5 @@
   volume      = {9326},
   pages       = {503--520},
   year        = {2015},
-  publisher   = {Springer},
+  publisher   = {Springer}
 }
