--- a/publications/wistp16.bib
+++ b/publications/wistp16.bib
@@ -1,7 +1,7 @@
 @inproceedings{muehlber2016implementation,
-  author    = {M{\"u}hlberg, Jan Tobias and Cleemput, Sara and Mustafa, A. Mustafa and Preneel, Bart and Piessens, Frank},
-  title     = {Secure Resource Sharing for Embedded Protected Module Architectures},
-  booktitle = {11th WISTP International Conference on Information Security Theory and Practice (WISTP'16)},
+  title     = {Implementation of a High Assurance Smart Meter using Protected Module Architectures},
+  author    = {M{\"u}hlberg, Jan Tobias and Cleemput, Sara and Mustafa, A. Mustafa and Van Bulck, Jo and Preneel, Bart and Piessens, Frank},
+  booktitle = {10th WISTP International Conference on Information Security Theory and Practice (WISTP'16)},
   series    = {LNCS},
   year      = {2016},
   volume    = {9895},
