Added final Sancus 2.0 pdf.

--- a/publications/tops17.bib
+++ b/publications/tops17.bib
@@ -2,5 +2,9 @@
   title    = {Sancus 2.0: {A} Low-Cost Security Architecture for {I}o{T} Devices},
   author   = {Noorman, Job and Van Bulck, Jo and M{\"u}hlberg, Jan Tobias and Piessens, Frank and Maene, Pieter and Preneel, Bart and Verbauwhede, Ingrid and G{\"o}tzfried, Johannes and M{\"u}ller, Tilo and Freiling, Felix},
   journal  = {ACM Transactions on Privacy and Security (TOPS)},
+  volume   = {20},
+  number   = {3},
+  pages    = {7:1--7:33},
+  month    = {September},
   year     = {2017}
 }
