Add short description for STM paper.

--- a/publications/stm17.bib
+++ b/publications/stm17.bib
@@ -1,16 +1,14 @@
-
-@inproceedings{noorman:authentic-execution,
- title       = "Authentic Execution of Distributed Event-Driven
-   Applications with a Small {TCB}",
- author      = "Job Noorman
+@inproceedings{noorman2017authentic,
+ title       = {Authentic Execution of Distributed Event-Driven
+                Applications with a Small {TCB}},
+ author      = {Job Noorman
                 and Jan Tobias M{\"u}hlberg
-                and Frank Piessens",
- booktitle   = "STM '17",
- year        = 2017,
- series      = "LNCS",
+                and Frank Piessens},
+ booktitle   = {13th International Workshop on Security and Trust Management (STM'17)},
+ year        = {2017},
+ series      = {LNCS},
  volume      = {10547},
  pages       = {55--71},
- publisher   = "Springer",
- address     = "Heidelberg",
+ publisher   = {Springer},
+ address     = {Heidelberg},
 }
-
