Add Scala FRP paper.

--- a/publications/acsac17.bib
+++ b/publications/acsac17.bib
@@ -1,6 +1,6 @@
 @inproceedings{vanbulck2017vulcan,
   title        = {{VulCAN}: Efficient Component Authentication and Software Isolation for Automotive Control Networks},
-  author       = {Jo Van Bulck and Jan Tobias M{\"u}hlberg and Frank Piessens},
+  author       = {Van Bulck, Jo and M{\"u}hlberg, Jan Tobias and Piessens, Frank },
   booktitle    = {Proceedings of the 33th Annual Computer Security Applications Conference (ACSAC'17)},
   year         = {2017},
   organization = {ACM}
