--- a/publications/ccs21.bib
+++ b/publications/ccs21.bib
@@ -1,6 +1,6 @@
 @inproceedings{alder21aion,
     author = {Alder, Fritz and Van Bulck, Jo and Piessens, Frank and M\"uhlberg, Jan Tobias},
-    title = {Aion: A Security Architecture for Embedded Systems with Strong Availability Guarantees for Enclaves},
+    title = {Aion: Enabling Open Systems through Strong Availability Guarantees for Enclaves},
     booktitle = {Proceedings of the 28th {ACM} Conference on Computer and Communications Security ({CCS'21})},
     year=2021,
     month = Nov,
