--- a/publications/ccs21-poster.bib
+++ b/publications/ccs21-poster.bib
@@ -1,9 +1,8 @@
-@inproceedings{scopelliti21poster,
-    author = {Scopelliti, Gianluca and Pouyanrad, Sepideh and Noorman, Job and Alder, Fritz and Piessens, Frank and M\"uhlberg, Jan Tobias},
-    author+an = {1=jointfirst;2=jointfirst},
-    title = {POSTER: An Open-Source Framework for Developing Heterogeneous Distributed Enclave Applications},
-    booktitle = {Proceedings of the 28th {ACM} Conference on Computer and Communications Security ({CCS'21})},
-    year=2021,
-    month = Nov,
-    publisher = {{ACM}},
+@inproceedings{scopelliti2021poster,
+  title={POSTER: An Open-Source Framework for Developing Heterogeneous Distributed Enclave Applications},
+  author={Scopelliti, Gianluca and Pouyanrad, Sepideh and Noorman, Job and Alder, Fritz and Piessens, Frank and M{\"u}hlberg, Jan Tobias},
+  author+an = {1=jointfirst;2=jointfirst},
+  booktitle={Proceedings of the 2021 ACM SIGSAC Conference on Computer and Communications Security},
+  pages={2393--2395},
+  year={2021}
 }
