s/Mathijs Hubrechtsen/Roos Hubrechtsen/ added DOI siot2019 paper

--- a/publications/siot2019.bib
+++ b/publications/siot2019.bib
@@ -1,6 +1,6 @@
 
 @inproceedings{werquin:2019fuzzing,
-  author = {Timothy Werquin and Mathijs Hubrechtsen and Ashok Thangarajan
+  author = {Timothy Werquin and Roos Hubrechtsen and Ashok Thangarajan
 and Frank
 Piessens and Jan Tobias M{\"u}hlberg},
   title = {Automated Fuzzing of Automotive Control Units},
